Player class has been creating, for now in this class ship movement is finished

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
     <!--game-->
     <main id="game" class="hidden">
-        <div class="game-map layer" id="game-layer"></div>
+        <div class="game-map layer" id="game-layer">
+            <div class="player-ship" id="player"></div>
+        </div>
         <!--Stats-->
         <div class="player-stats">
             <div class="player-stats__container">
