Created Missile and handle player shot

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!--game-->
     <main id="game" class="hidden">
-        <div class="game-map layer" id="game-layer">
+        <div class="game-map layer" id="game-map">
             <div class="player-ship" id="player"></div>
         </div>
         <!--Stats-->
