--- a/index.html
+++ b/index.html
@@ -48,6 +48,39 @@
                 </p>
             </div>
         </div>
+
+        <section class="store" id="store">
+            <h2 class="store__section-title">Player Ships:</h2>
+            <!--section with player ships-->
+            <section class="store__section" id="store-player-ships">
+                <div class="store__container">
+                    <div class="store__img "><img src="/assets/player/tier1.png" alt=""></div>
+                    <div class="store__stats">
+                        <div class="store__stat">
+                            <p>HP</p>
+                            <p>3</p>
+                        </div>
+                        <div class="store__stat">
+                            <p>Speed</p>
+                            <p>8</p>
+                        </div>
+                        <div class="store__stat">
+                            <p>double shot</p>
+                            <p>false</p>
+                        </div>
+                    </div>
+                    <button class="button store__button">Buy!</button>
+                </div>
+            </section>
+
+            <!--section with player allies-->
+            <h2 class="store__section-title">Player Allies:</h2>
+            <section class="store__section" id="store-player-allies">
+            </section>
+
+            <!--section with lives-->
+            <section id="store-lives"></section>
+        </section>
     </main>
     <script src="./app/main.js" type="module"></script>
 </body>
