improvement code in Store and creates separate object for each products in store

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
         </div>
 
-        <section class="store hidden" id="store">
+        <section class="store" id="store">
             <h2 class="store__section-title">Player Ships:</h2>
             <!--section with player ships-->
             <section class="store__section" id="store-player-ships">
