--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             </div>
         </div>
 
-        <section class="store" id="store">
+        <section class="store hidden" id="store">
+            <button id="close-store" class="store__close-button">X</button>
             <h2 class="store__section-title">Player Ships:</h2>
             <!--section with player ships-->
             <section class="store__section" id="store-player-ships">
@@ -81,6 +82,8 @@
             <!--section with lives-->
             <section id="store-lives"></section>
         </section>
+
+        <button class="button button__open-store" id="open-store-button"><span class="fas fa-cart-plus"></span></button>
     </main>
     <script src="./app/main.js" type="module"></script>
 </body>
