Created Message which was showed after game

--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
             <section id="store-lives"></section>
         </section>
 
+        <section class="message hidden" id="message">
+            <p class="message__record hidden" id="record-message">NEW RECORD!</p>
+            <h1 class="message__score-content">Your score: <span id="message-score" class="message__score">1500</span>
+            </h1>
+            <p class="message__other-stat">Number of destroyed enemies: <span id="message-destroyed-enemies">0</span>
+            </p>
+            <p class="message__other-stat">Number of fired missiles: <span id="message-fired-missiles">0</span></p>
+            <button class="button message__button" id="message-button">Close</button>
+        </section>
+
         <button class="button button__open-store" id="open-store-button"><span class="fas fa-cart-plus"></span></button>
     </main>
     <script src="./app/main.js" type="module"></script>
