--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
 
         <button class="button button__open-store" id="open-store-button"><span class="fas fa-cart-plus"></span></button>
     </main>
+
+    <section class="settings" id="settings">
+        <h2 class="settings__header">Settings</h2>
+        <form class="settings__form">
+            <div class="settings__bar-container"><span class="fas fa-music"></span><input type="range" value='30'
+                    max="100"></div>
+            <div class="settings__bar-container"><span class="fas fa-volume-up"></span><input type="range" value='30'
+                    max="100"></div>
+        </form>
+        <button class="button settings__button" id="settings-close-button">Close</button>
+    </section>
     <script src="./app/main.js" type="module"></script>
 </body>
 
