Handle of settings

--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
         <button class="button button__open-store" id="open-store-button"><span class="fas fa-cart-plus"></span></button>
     </main>
 
-    <section class="settings" id="settings">
+    <section class="settings hidden" id="settings">
         <h2 class="settings__header">Settings</h2>
         <form class="settings__form">
             <div class="settings__bar-container"><span class="fas fa-music"></span><input type="range" value='30'
-                    max="100"></div>
+                    max="100" id="music"></div>
             <div class="settings__bar-container"><span class="fas fa-volume-up"></span><input type="range" value='30'
-                    max="100"></div>
+                    max="100" id="game-sounds"></div>
         </form>
         <button class="button settings__button" id="settings-close-button">Close</button>
     </section>
