--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
             <button class="button message__button" id="message-button">Close</button>
         </section>
 
+        <button id="return" class="button button__game-button button--return"><span class="fas fa-reply"></span>
+            Return</button>
+        <button id="settings-in-game" class="button button__game-button button--settings-in-game">Settings</button>
         <button class="button button__open-store" id="open-store-button"><span class="fas fa-cart-plus"></span></button>
     </main>
 
