Change size of header with highest score

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </form>
         <button class="button settings__button" id="settings-close-button">Close</button>
     </section>
-    <script src="./app/main.js" type="module"></script>
+    <script src="/app/main.js" type="module"></script>
 </body>
 
 </html>
